fixed alignment inside cards, added load more button

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,8 +1,7 @@
 .cards {
   display: grid;
   grid-template-columns: 4fr 4fr 4fr;
-  grid-gap: 16px;
-  flex-wrap: wrap;
+  grid-gap: 2rem;
 
   p {
     color: rgb(140, 140, 140);
